# template-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
resource/: CMakeLists.txt
src/: main.cpp
